RPG-1/Errors.txt
YoRPG.java:33: error: non-static variable name cannot be referenced from a static context
    return name;
           ^
YoRPG.java:46: error: non-static variable special cannot be referenced from a static context
    special=false;
    ^
YoRPG.java:49: error: non-static variable special cannot be referenced from a static context
    special=true;
    ^
YoRPG.java:52: error: non-static variable special cannot be referenced from a static context
    return special;
           ^
4 errors

:(
 UPDATE: FIXED BY NOT REFERRING TO THEM  FROM A STATIC CONTEXT
